Fixed styling on mobile

--- a/style.css
+++ b/style.css
@@ -158,11 +158,12 @@ text-align: center;
         font-size: 20px;
     }
     h1{
-        font-size: 50px;
+        font-size: 35px;
     }
     #about{
         padding: 20px;
         margin-top: 20px;
+        margin: 0px;
     }
     #about p{
         margin: 20px;
